--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
     </head>
     <body>
         
+        <header>
+            <div id="pattern-image">
+                <img id="logo" src="img/logo.svg" alt="Logo">
+            </div>
+        </header>
+
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
+
     </body>
 </html>
