Aggiunta sezione preview notizia

--- a/index.html
+++ b/index.html
@@ -16,7 +16,33 @@
         </header>
 
         <main>
+            <!-- Sezione preview notizia -->
+            <section>
+                <div class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee.</div>
+                <div class="didascalia">Scritto da <span id="autore">The Booleaners</span></div>
+                <div class="didascalia">il 10/10/2020</div>
 
+                <!-- Immagini in primo piano -->
+                <div>
+                    <img class="tim-images" src="img/tim-1.jpg" alt="Tim 1">
+                    <img class="tim-images" src="img/tim-2.jpg" alt="Tim 2">
+                </div>
+                <!-- /Immagini in primo piano -->
+
+                <!-- Descrizione Immagini -->
+                <div class="didascalia">
+                    <div>1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</div>
+                    <div>2nd Photo: Wikimedia, by Paul Clarke</div>
+                </div>
+                <!-- /Descrizione Immagini -->
+            </section>
+            <!-- /Sezione preview notizia -->
+
+            <!-- Sezione corpo della notizia -->
+            <section>
+                
+            </section>
+            <!-- /Sezione corpo della notizia -->
         </main>
 
         <footer>
