--- a/index.html
+++ b/index.html
@@ -40,7 +40,53 @@
 
             <!-- Sezione corpo della notizia -->
             <section>
-                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. <mark>Nostrum vel necessitatibus blanditiis iusto distinctio recusandae</mark>, id quisquam ex impedit corrupti aliquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. Nostrum vel necessitatibus blanditiis iusto distinctio recusandae, id quisquam ex impedit corrupti aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. Nostrum vel necessitatibus blanditiis iusto distinctio recusandae, id quisquam ex impedit corrupti aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. Nostrum vel necessitatibus blanditiis iusto distinctio recusandae, id quisquam ex impedit corrupti aliquam?</p>
+
+                <ul>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, obcaecati possimus. Quo maxime aliquid quaerat earum hic, deleniti maiores aliquam voluptate totam nobis ullam similique labore porro dolor necessitatibus quas!</li>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, obcaecati possimus. Quo maxime aliquid quaerat earum hic, deleniti maiores aliquam voluptate totam nobis ullam similique labore porro dolor necessitatibus quas!</li>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, obcaecati possimus. Quo maxime aliquid quaerat earum hic, deleniti maiores aliquam voluptate totam nobis ullam similique labore porro dolor necessitatibus quas!</li>
+                </ul>
+
+                <!-- Inizio tabella dati -->
+                <table>
+                    <!-- Testa della tabella -->
+                    <thead>
+                        <tr>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+                    <!-- /Testa della tabella -->
+
+                    <!-- Corpo della tabella -->
+                    <tbody>
+                        <tr class="blue-row">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora quis laudantium ipsa hic dolor cupiditate alias accusantium illum amet reiciendis sequi deserunt minima veniam corporis, temporibus deleniti non consequatur quae!</td>
+                        </tr>
+
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora quis laudantium ipsa hic dolor cupiditate alias accusantium illum amet reiciendis sequi deserunt minima veniam corporis, temporibus deleniti non consequatur quae!</td>
+                        </tr>
+
+                        <tr class="blue-row">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora quis laudantium ipsa hic dolor cupiditate alias accusantium illum amet reiciendis sequi deserunt minima veniam corporis, temporibus deleniti non consequatur quae!</td>
+                        </tr>
+                    </tbody>
+                    <!-- /Corpo della tabella -->
+                </table>
+                <!-- Fine tabella dati -->
+
+                <!-- Paragrafo spiegazione tabella dati -->
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. Nostrum vel necessitatibus blanditiis iusto distinctio recusandae, id quisquam ex impedit corrupti aliquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. <mark>Nostrum vel necessitatibus blanditiis iusto distinctio recusandae</mark>, id quisquam ex impedit corrupti aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. Nostrum vel necessitatibus blanditiis iusto distinctio recusandae, id quisquam ex impedit corrupti aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia dolore dignissimos nam ut maxime non nemo. Nostrum vel necessitatibus blanditiis iusto distinctio recusandae, id quisquam ex impedit corrupti aliquam?</p>
+                <!-- /Paragrafo spiegazione tabella dati -->
             </section>
             <!-- /Sezione corpo della notizia -->
         </main>
