--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
         </main>
 
         <footer>
-
+            <div class="didascalia importante">Potrebbero interessarti</div>
+            <div class="interesse uno">Lorem ipsum dolor</div>
+            <div class="interesse due">Lorem ipsum dolor</div>
         </footer>
 
     </body>
