Aggiunto border collapse

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
 
                 <!-- Inizio tabella dati -->
-                <table>
+                <table id="tabella-dati">
                     <!-- Testa della tabella -->
                     <thead>
                         <tr>
